# forum-rs

./: Cargo.toml  NOTES.md
api/: Cargo.toml
api/src/: main.rs
application/: Cargo.toml
domain/: Cargo.toml
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
