# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "application", "domain", "infrastructure", "shared"]


[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
sea-orm = "0.11"
serde = { version = "1" }
serde_json = "1"
anyhow = "1.0"
