# api/Cargo.toml

[package]
name = "api"
version = "0.2.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"


axum = "0.6"
tera = "1.18"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
tracing-subscriber = "0.3"
